{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 134,
  "lineage": "f53124b3-3eac-6de3-a3a2-253ba1ce45ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8286b71b81c3cc1",
            "arn": "arn:aws:ec2:eu-central-1:081723111971:instance/i-025090ce9b22ed479",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025090ce9b22ed479",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-test-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2471286b4d54616",
            "private_dns": "ip-172-31-40-82.eu-central-1.compute.internal",
            "private_ip": "172.31.40.82",
            "public_dns": "ec2-18-197-87-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.87.109",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0948451be5f339d0e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "App security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ba6660c0",
            "tags": {
              "Name": "App Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b25b6b635122b780"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest-key",
            "aws_security_group.app_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8286b71b81c3cc1",
            "arn": "arn:aws:ec2:eu-central-1:081723111971:instance/i-0046ea4b2657d7910",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0046ea4b2657d7910",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-test-terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0709961f465d3f570",
            "private_dns": "ip-172-31-38-41.eu-central-1.compute.internal",
            "private_ip": "172.31.38.41",
            "public_dns": "ec2-18-184-202-196.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.202.196",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01f19d67910864c71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "DB security"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ba6660c0",
            "tags": {
              "Name": "DB MySQL Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0992c0ec4f217ac4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.mytest-key",
            "aws_security_group.db_security"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:081723111971:security-group/sg-0b25b6b635122b780",
            "description": "Security group for app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b25b6b635122b780",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "App security",
            "name_prefix": null,
            "owner_id": "081723111971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-48f9cb20"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:081723111971:security-group/sg-0992c0ec4f217ac4d",
            "description": "Security group for DB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0992c0ec4f217ac4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB security",
            "name_prefix": null,
            "owner_id": "081723111971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Application"
            },
            "timeouts": null,
            "vpc_id": "vpc-48f9cb20"
          }
        }
      ]
    }
  ]
}